Ajout script hotjar

--- a/index.html
+++ b/index.html
@@ -3710,6 +3710,20 @@ to {
 }
 </style>
 
+
+
+<!-- Hotjar Tracking Code for https://www.optyms.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:5035941,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 </head>
 
 <body>
@@ -3729,10 +3743,17 @@ to {
 <a href="/">
 <!-- Logo SVG -->
 <svg width="240" height="80" viewBox="0 0 240 80" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M10 40C10 20 25 5 45 5C65 5 80 20 80 40" stroke="#eb3f04" stroke-width="10" fill="none"/>
+<path d="M80 40C80 20 65 5 45 5C25 5 10 20 10 40
+           C10 60 25 75 45 75C65 75 80 60 80 60
+           M80 40" 
+        stroke="#eb3f04" 
+        stroke-width="10" 
+        fill="none"/>
 <text x="45" y="45" font-family="Arial Black, sans-serif" font-size="32" font-weight="bold" fill="#eb3f04">PTYMS</text>
 <text x="85" y="65" font-family="Arial, sans-serif" font-size="16" letter-spacing="2" fill="#eb3f04">SYSTEM</text>
 </svg>
+
+
 </a>
 </div>
 
