Update mentions légales

--- a/index.html
+++ b/index.html
@@ -3766,7 +3766,7 @@ to {
 
 <div class="nav-cta">
 <!--a href="#contact" class="btn btn-outline">Se connecter</a-->
-<a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary">Audit gratuit</a>
+<a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary">Audit gratuit</a>
 </div>
 
 <button class="mobile-menu-toggle" aria-label="Menu">
@@ -3799,7 +3799,7 @@ to {
 <p class="hero-subtitle">Découvrez comment notre service d'acquisition client data-driven transforme chaque euro investi en publicité en croissance prévisible et mesurable</p>
 
 <div class="hero-cta">
-<a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
+<a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
 Réserver mon audit gratuit
 <i class="fas fa-arrow-right"></i>
 </a>
@@ -3915,7 +3915,7 @@ Plus que <span class="remaining-spots" data-spots="7">7</span> places disponible
 </div>
 
 <div class="engagement-cta">
-<a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
+<a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
 Réserver mon audit gratuit
 <i class="fas fa-arrow-right"></i>
 </a>
@@ -4160,7 +4160,7 @@ animation: brush 1.5s ease-in-out forwards;">
 
 <!-- CTA Section -->
 <div class="calculator-cta">
-<a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
+<a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
 Débloquer votre potentiel de croissance
 <i class="fas fa-arrow-right"></i>
 </a>
@@ -4260,7 +4260,7 @@ Débloquer votre potentiel de croissance
 
         <div class="method-cta_S3">
             <h4>Prêt à optimiser votre système d'acquisition ?</h4>
-            <a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
+            <a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
                 Réserver mon audit stratégique gratuit
                 <i class="fas fa-arrow-right"></i>
             </a>
@@ -4335,7 +4335,7 @@ Débloquer votre potentiel de croissance
             </div>
 
             <div class="audit-cta_S4">
-                <a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-xl">
+                <a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-xl">
                     Réserver mon audit gratuit maintenant
                     <i class="fas fa-arrow-right"></i>
                 </a>
@@ -4430,7 +4430,7 @@ Débloquer votre potentiel de croissance
         </div>
 
         <div class="why-us-cta_S6">
-            <a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
+            <a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
                 Découvrir notre approche
                 <i class="fas fa-arrow-right"></i>
             </a>
@@ -4773,7 +4773,7 @@ Mais ces métriques sont pour nous des outils d'optimisation, pas des objectifs 
             </div>
 
             <div class="cta-buttons_S8">
-                <a href="/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
+                <a href="https://optyms.com/prise-rdv-audit-gratuit-page" class="btn btn-primary btn-lg">
                     Je Réserve Mon Audit Gratuit
                     <i class="fas fa-arrow-right"></i>
                 </a>
@@ -4839,7 +4839,7 @@ Mais ces métriques sont pour nous des outils d'optimisation, pas des objectifs 
                 <div class="footer-links">
                     <h4>Services</h4>
                     <ul>
-                        <li><a href="/prise-rdv-audit-gratuit-page">Audit offert (Valeur 997€)</a></li>
+                        <li><a href="https://optyms.com/prise-rdv-audit-gratuit-page">Audit offert (Valeur 997€)</a></li>
                         <!--li><a href="#tarifs">Tarifs</a></li-->
                         <li><a href="#faq">FAQ</a></li>
                     </ul>
@@ -4848,7 +4848,7 @@ Mais ces métriques sont pour nous des outils d'optimisation, pas des objectifs 
                 <div class="footer-links">
                     <h4>Entreprise</h4>
                     <ul>
-                        <li><a href="/a-propos-d-optyms">À propos d'OPTYMS</a></li>
+                        <li><a href="https://optyms.com/a-propos-d-optyms">À propos d'OPTYMS</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Offres d'emploi</a></li>
                     </ul>
@@ -4857,10 +4857,10 @@ Mais ces métriques sont pour nous des outils d'optimisation, pas des objectifs 
                 <div class="footer-links">
                     <h4>Légal</h4>
                     <ul>
-                        <li><a href="/politique-de-confidentialite" target="_blank" rel="noopener noreferrer">Confidentialité</a></li>
-                        <li><a href="/conditions-gnrales-dutilisation-page" target="_blank" rel="noopener noreferrer">CGU</a></li>
-                        <li><a href="/cookies-page" target="_blank" rel="noopener noreferrer">Cookies</a></li>
-						<li><a href="#" class="termly-display-preferences">Préférences de consentement</a></li>
+                        <li><a href="https://optyms.com/politique-de-confidentialite" target="_blank" rel="noopener noreferrer">Confidentialité</a></li>
+                        <li><a href="https://optyms.com/conditions-gnrales-dutilisation-page" target="_blank" rel="noopener noreferrer">CGU</a></li>
+                        <li><a href="https://optyms.com/cookies-page" target="_blank" rel="noopener noreferrer">Cookies</a></li>
+						<!--li><a href="#" class="termly-display-preferences">Préférences de consentement</a></li-->
                     </ul>
                 </div>
 
