--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="fr">
 <head>
 
+
+<script type="text/javascript" src="//script.crazyegg.com/pages/scripts/0128/2254.js" async="async"></script>
+
+
+
 <!-- Hotjar Tracking Code for https://www.optyms.com -->
 <script>
     (function(h,o,t,j,a,r){
@@ -37,6 +42,16 @@
 <meta name="robots" content="index, follow">
 <meta name="language" content="French">
 <meta name="author" content="OPTYMS">
+
+
+
+
+
+
+
+
+
+
 <link rel="canonical" href="https://optyms.com/">
 
 <!-- Structured Data pour Google (Schema.org) -->
